// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/SmallModal With Dangerous Content 1`] = `
<div
  className="max-w-full bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
      "width": "28rem",
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-red-500"
    >
      Bitte bestätige die Löschung deines Accounts
    </h1>
    <p>
      Dein Account wird undwiederruflich gelöscht. Alle deine Projekte und Daten werden von der Platform und aus der Datenbank entfernt.
    </p>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <div
      className="block w-full text-right"
    >
      <button
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-red-500 bg-white border border-red-500 text-red-500 hover:bg-red-500 hover:bg-opacity-10 mr-4"
        type="button"
        variant="dangerous"
      >
        Löschen
      </button>
      <button
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60"
        type="button"
        variant="primary"
      >
        Abbrechen
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal With Footer Content 1`] = `
<div
  className="max-w-full bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
      "width": "28rem",
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-blue-500"
    >
      Willkommen!
    </h1>
    <div>
      Du bist eingeloggt als:
      <div
        className="mt-1"
      >
        <span
          className="mr-1.5 inline-block align-middle rounded-full border border-blue-50"
          style={
            Object {
              "height": 25,
              "width": 25,
            }
          }
        >
          <svg
            colors={
              Array [
                "#E40134",
                "#213A8F",
                "#3192D0",
                "#63B9E9",
                "#FFFFFF",
              ]
            }
            fill="none"
            height={24}
            name="User"
            size={24}
            viewBox="0 0 36 36"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <mask
              height={36}
              id="mask__beam"
              maskUnits="userSpaceOnUse"
              width={36}
              x={0}
              y={0}
            >
              <rect
                fill="white"
                height={36}
                rx={20}
                width={36}
              />
            </mask>
            <g
              fill="transparent"
              mask="url(#mask__beam)"
            >
              <rect
                fill="#63B9E9"
                height={36}
                rx={20}
                width={36}
              />
              <rect
                fill="#E40134"
                height={36}
                rx={6}
                transform="translate(5 -1) rotate(55 18 18) scale(1.1)"
                width={36}
                x="0"
                y="0"
              />
              <g
                transform="translate(7 -2) rotate(-5 18 18)"
              >
                <path
                  d="M15 20c2 1 4 1 6 0"
                  fill="none"
                  stroke="white"
                  strokeLinecap="round"
                />
                <rect
                  fill="white"
                  height={2}
                  rx={1}
                  stroke="none"
                  width={1.5}
                  x={14}
                  y={14}
                />
                <rect
                  fill="white"
                  height={2}
                  rx={1}
                  stroke="none"
                  width={1.5}
                  x={20}
                  y={14}
                />
              </g>
            </g>
          </svg>
        </span>
        <span
          className="text-gray-400"
        >
          user@usermail.com
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex gap-4 place-content-between"
  >
    <div
      className="block w-full text-right"
    >
      <button
        className="text-lg px-4 py-2 font-sans transition cursor-pointer focus-offset focus:ring-blue-500 bg-blue-500 text-white hover:opacity-60"
        type="button"
        variant="primary"
      >
        Dein Profil
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots UI Elements/SmallModal Without Footer Content 1`] = `
<div
  className="max-w-full bg-white p-8 shadow-lg flex flex-col gap-8 place-content-between"
  style={
    Object {
      "minHeight": 360,
      "width": "28rem",
    }
  }
>
  <div>
    <h1
      className="text-3xl font-semibold m-0 mb-4 text-blue-500"
    >
      Gehe zu deinen E-Mails
    </h1>
    <p>
      Wir haben dir eine E-Mail mit einem Anmeldungs-Link geschickt. Klicke den Link an, um dich einzuloggen.
    </p>
  </div>
</div>
`;
